python-openstackclient (2.6.0-1) experimental; urgency=medium

  [ Corey Bryant ]
  * New upstream release.
  * Align (Build-)Depends with upstream.

  [ Thomas Goirand ]
  * Make build reproducible applying Lamby's patch (Closes: #826676).
  * Unblacklist tests (they all work now...).

 -- Thomas Goirand <zigo@debian.org>  Mon, 11 Jul 2016 14:58:15 +0200

python-openstackclient (2.5.0-1) experimental; urgency=medium

  [ Ondřej Nový ]
  * Standards-Version is 3.9.8 now (no change)
  * d/rules: Removed UPSTREAM_GIT with default value

  [ Thomas Goirand ]
  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Mon, 06 Jun 2016 08:06:59 +0000

python-openstackclient (2.3.0-2) unstable; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Mon, 04 Apr 2016 11:30:04 +0000

python-openstackclient (2.3.0-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Sat, 02 Apr 2016 15:21:43 +0200

python-openstackclient (2.2.0-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Mon, 14 Mar 2016 15:01:59 +0100

python-openstackclient (2.1.0-1) experimental; urgency=medium

  [ Corey Bryant ]
  * New upstream release.
  * Align (Build-)Depends with upstream.

  [ Thomas Goirand ]
  * Standards-Version: 3.9.7 (no change).

 -- Thomas Goirand <zigo@debian.org>  Thu, 03 Mar 2016 04:19:43 +0000

python-openstackclient (2.0.0-3) experimental; urgency=medium

  * Blacklist 3 failed unit tests in Jessie (works in Sid):
    - test_shell.TestShellCli.test_shell_args_precedence
    - test_shell.TestShellCliEnv.test_shell_args_precedence_1
    - test_shell.TestShellCliEnv.test_shell_args_precedence_2
  * Drop python-tuskarclient from build-depends (project is stopped).
  * Add Breaks+Replaces: python-openstackclient (<< 2.0.0-2~) in