@@ -7,6 +7,7 @@ python-openstackclient (2.6.0-1) experimental; urgency=medium
   [ Thomas Goirand ]
   * Make build reproducible applying Lamby's patch (Closes: #826676).
   * Unblacklist tests (they all work now...).
+  * Switch to using pkgos-dh_auto_{test,install}.
 
  -- Thomas Goirand <zigo@debian.org>  Mon, 11 Jul 2016 14:58:15 +0200
 
